syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ProductProtoService{
	rpc GetProduct (GetProductReq) returns (ProductModel);
	rpc GetAllProduct (GetAllProductReq) returns (stream ProductModel);

	rpc AddProduct (AddProductReq) returns (ProductModel);
	rpc UpdateProduct (UpdateProductReq) returns (ProductModel);
	rpc DeleteProduct (DeleteProductReq) returns (DeleteProductRes);

	rpc InsertBulkProduct (stream ProductModel) returns (InsertBulkProductRes);
	rpc Test (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetProductReq {
	int32 productId = 1;
}

message GetAllProductReq{

}

message AddProductReq{
	ProductModel product = 1;
}

message UpdateProductReq{
	ProductModel product = 1;
}

message DeleteProductReq{
	int32 productId = 1;
}

message DeleteProductRes{
	bool success =1;
}

message InsertBulkProductRes{
	bool success =1;
}

message ProductModel{
	int32 productId = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    ProductStatus status = 5;
	google.protobuf.Timestamp createdTime = 6;
}

enum ProductStatus{
	INSTOCK = 0;
    LOW = 1;
    NONE = 2;
}